# goit-pythonweb-hw-01

./: README.md  pyproject.toml
tasks/: task1.py  task2.py  task_logger.py
