[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "Homework 01 in scope of Fullstack Web Development with Pyton module"
authors = [
    {name = "Slava Poliakov",email = "78slavapolyakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
